--- a/app/src/main/res/layout/content_booking_history.xml
+++ b/app/src/main/res/layout/content_booking_history.xml
@@ -14,68 +14,11 @@
     tools:context="com.utshelps.utshelpsapp.BookingHistoryActivity"
     tools:showIn="@layout/activity_booking_history">
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/bookingHistory_recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="0dp"
-            android:layout_height="150dp"
-            android:layout_weight="1.7"
-            android:scaleType="fitCenter"
-            android:src="@drawable/wksp" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_marginStart="5dp"
-            android:layout_weight="2"
-            android:orientation="vertical"
-            android:paddingTop="15dp">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="6dp"
-                android:text="@string/workshop_001"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="6dp"
-                android:text="@string/thursday_25_august_2016"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="6dp"
-                android:text="@string/_13_00_15_00"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="6dp"
-                android:text="@string/cb10_01_105"
-                android:textColor="#000000"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
-
-    </LinearLayout>
-
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
